<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Start.Authentification"
    android:id="@+id/Authentification">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/login_bk_color"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/mainLayout">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:paddingTop="20dp"
            android:layout_alignParentStart="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/logo3"
                        android:layout_width="212dp"
                        android:layout_height="183dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="79dp"
                        android:layout_marginLeft="79dp"
                        android:layout_marginEnd="80dp"
                        android:layout_marginRight="80dp"
                        android:layout_marginBottom="-2dp"
                        android:contentDescription="logo"
                        app:srcCompat="@drawable/finek_final_sans"
                        tools:layout_editor_absoluteX="119dp"
                        tools:layout_editor_absoluteY="28dp" />

                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputEmail"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">
                    <EditText
                        android:id="@+id/editTextEmail"
                        style="@style/modifiedEditText"
                        android:inputType="textEmailAddress"
                        android:hint="@string/login_email_hint"
                        android:maxLines="1"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputPassword"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">
                    <EditText
                        android:id="@+id/editTextPassword"
                        style="@style/modifiedEditText"
                        android:hint="@string/login_password_hint"
                        android:maxLines="1"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/viewParent"
                    android:id="@+id/textViewMdpOub"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:text="@string/mdp_oublie"
                    android:textColor="@color/colorTextView"
                    android:textSize="@dimen/newsMoreTextSize"
                    android:onClick="onClickMDP"/>
                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/loginButton"
                    style="@style/loginButton"
                    app:spinning_bar_width="4dp"
                    app:spinning_bar_color="#FFF"
                    android:text="@string/login"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/loginViewsMargin"/>

                <TextView
                    android:id="@+id/inscription"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:onClick="onLoginClick"
                    android:text="@string/new_user"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextView"
                    android:textSize="17sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="12"
                    android:gravity="center"
                    android:layout_marginTop="30dp">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_weight="3"/>

                    <TextView
                        style="@style/viewParent.headerText.NoMode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:text="@string/social"
                        android:textAlignment="center"
                        android:textSize="12sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_weight="3"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="20dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_facebook"
                        android:contentDescription="facebook"/>

                    <ImageView
                        android:id="@+id/signInGoogle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:contentDescription="google plus"
                        android:src="@drawable/ic_google_plus"/>
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signInGoogle"
                    app:layout_constraintVertical_bias="0.26" />

            </LinearLayout>
        </ScrollView>

        <View
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="0dp"
            android:background="@drawable/ic_side_bg" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="30dp"
            android:onClick="onLoginClick"
            android:src="@drawable/ic_add_img"
            android:layout_alignParentEnd="true"
            android:contentDescription="register"
            android:layout_marginEnd="1dp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>