<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:id="@+id/Register">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/register_bk_color"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:layout_gravity="center">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInGoogle"
            app:layout_constraintVertical_bias="0.26" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_marginTop="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="161dp">

                    <TextView
                        style="@style/viewParent.headerText.NoMode"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="@string/header"
                        android:textColor="@color/whiteTextColor" />

                    <ImageView
                        android:layout_width="179dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="0dp"
                        android:contentDescription="people"
                        android:src="@drawable/ic_login_hero" />
                </RelativeLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="814dp"
                    android:layout_marginTop="10dp"
                    app:cardBackgroundColor="@color/whiteTextColor"
                    app:cardCornerRadius="40dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="774dp"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputLastName"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/editTextLastName"
                                style="@style/modifiedEditText"
                                android:hint="Nom"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputFirstName"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/editTextFirstName"
                                style="@style/modifiedEditText"
                                android:hint="Prénom"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputProfession"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/editTextProfession"
                                style="@style/modifiedEditText"
                                android:hint="Profession"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputMobile"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/editTextMobile"
                                style="@style/modifiedEditText"
                                android:hint="@string/phone"
                                android:inputType="phone"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputDateOfBirth"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/editTextDateOfBirth"
                                style="@style/modifiedEditText"
                                android:hint="Date de naissance"
                                android:maxLines="1"
                                android:onClick="onClickDate" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputEmail"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/editTextEmail"
                                style="@style/modifiedEditText"
                                android:hint="@string/login_email_hint"
                                android:inputType="textEmailAddress"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputPassword"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/editTextPassword"
                                style="@style/modifiedEditText"
                                android:hint="@string/login_password_hint"
                                android:inputType="textPassword"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputPasswordConfirm"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/editTextPasswordConfirm"
                                style="@style/modifiedEditText"
                                android:hint="Confirmation Mot de passe"
                                android:inputType="textPassword"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/layoutRadioButton"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <RadioGroup
                                android:id="@+id/radioButtonGroup"
                                style="@style/parent"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/textViewSexe"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Sexe  :          " />

                                <RadioButton
                                    android:id="@+id/radioButtonFemale"
                                    style="@style/modifiedEditText"
                                    android:layout_width="124dp"
                                    android:layout_height="wrap_content"
                                    android:checked="true"
                                    android:text="Femme" />

                                <RadioButton
                                    android:id="@+id/radioButtonMale"
                                    style="@style/modifiedEditText"
                                    android:layout_width="127dp"
                                    android:layout_height="wrap_content"
                                    android:text="Homme" />
                            </RadioGroup>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/conditions"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <CheckBox
                                android:id="@+id/checkBoxCondition"
                                style="@style/modifiedEditText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="J'ai lu et j'accepte les conditions générales d'utilisation, notamment la mention relative à la protection des données personnelles." />
                        </com.google.android.material.textfield.TextInputLayout>

                        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                            android:id="@+id/registerButton"
                            style="@style/loginButton"
                            initialCornerAngle="27dp"
                            spinning_bar_color="#FFF"
                            spinning_bar_padding="6dp"
                            spinning_bar_width="4dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:onClick="onClick"
                            android:text="Inscription" />

                        <TextView
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:onClick="onLoginClick"
                            android:text="Vous avez déjà un compte?"
                            android:textAlignment="center"
                            android:textColor="@color/register_bk_color"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="12"
                    android:gravity="center"
                    android:layout_marginTop="30dp">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="@color/whiteTextColor"
                        android:layout_weight="3"/>

                    <TextView
                        style="@style/viewParent.headerText.NoMode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:text="Utilisez d'autres méthodes"
                        android:textAlignment="center"
                        android:textColor="@color/whiteTextColor"
                        android:textSize="12sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="@color/whiteTextColor"
                        android:layout_weight="3"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_facebook"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_google_plus"
                        android:layout_marginLeft="10dp"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <View
            android:layout_marginTop="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_width="11dp"
            android:layout_height="match_parent"
            android:background="@drawable/ic_side_bg"/>
        <ImageView
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_img"
            android:layout_marginRight="11dp"
            android:layout_marginBottom="0dp"
            android:onClick="onLoginClick"
            android:adjustViewBounds="false"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>